# sc-cxxrtl

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
examples/counter/: counter.v  make.py  test_counter.py
sc_cxxrtl/: __init__.py  compile.py  exec.py  flow.py
tests/: test_flow.py
